--- a/report.Rmd
+++ b/report.Rmd
@@ -1,42 +1,72 @@
 ---
-title: "Refuge Survey Report"
+title: "Doug and Ronnie's Really Cool Refuge Survey Report"
 params:
   input_dat: NA
   dat: NA
   zone: NA
 ---
 
-
 ## `r unique(dat()$RegionName)` Region
 ## `r Sys.Date()`
-## Zone: `r input$zone_select`
-## Selected suveys? `r input$selected_select`
-## Survey titles that contain `r input$search`
-## 
-
-### Regional Summary
-
-#### Current Surveys: `r input_dat %>% filter(SurveyStatus == "Current") %>% nrow()`
-
-#### Surveys with Protocols: `r input_dat %>% filter(HasProtocol == "Has Protocol") %>% nrow()` (`r round((input_dat %>% filter(HasProtocol != "Has Protocol") %>% nrow()) / (input_dat %>% filter(SurveyStatus == "Current") %>% nrow()), digits = 0)`%)
-
-#### Inventory Surveys: `r input_dat %>% filter(SurveyTypeShort == "Inventory") %>% nrow()`
-
-#### Monitoring Surveys: `r input_dat %>% filter(SurveyTypeShort == "Monitoring") %>% nrow()`
-
-#### Research: `r input_dat %>% filter(SurveyTypeShort == "Research") %>% nrow()`
 
 
-Here are some summaries based on the criteria that you selected in the Refuge Survey App. 
+### Input Parameters
 
-```{r user_inputs, echo=FALSE, message=FALSE}
-dat_inputs <- data.frame(Zone = input$zone_select,
-                         Selected = input$selected_select)
-flextable::flextable(dat_inputs)
+This report was generated based on the following filters:
+
+```{r, echo=FALSE}
+library(kableExtra)
+
+dat_input_params <- data.frame(parameters = c("Zone",
+                                              "Selected survey",
+                                              "Search terms",
+                                              "Survey Status",
+                                              "Refuges",
+                                              "Survey type",
+                                              "Cooperative survey",
+                                              "Resource theme",
+                                              "Frequency"),
+                               value = c(paste(unique(dat()$Zone), collapse = ", "),
+                                         paste(unique(dat()$Selected), collapse = ", "),
+                                         paste(input$search, collapse = ", "),
+                                         paste(unique(dat()$SurveyStatus), collapse = ", "),
+                                         paste(unique(dat()$StationName), collapse = ", "),
+                                         paste(unique(dat()$SurveyTypeShort), collapse = ", "),
+                                         paste(unique(dat()$Coop), collapse = ", "),
+                                         paste(unique(dat()$ResourceThemeLevel2), collapse = ", "),
+                                         paste(unique(dat()$Frequency), collapse = ", ")))
+kbl(dat_input_params, 
+    col.names = NULL) %>%
+  kable_styling(full_width = F,
+                position = "left",
+                font_size = 16)
 ```
 
 
-Zone: `r input$zone_select`
+### Summary
+
+```{r, echo=FALSE}
+library(kableExtra)
+dat_summary <- data.frame(stat = c("Total Surveys",
+                                   "Current Surveys",
+                                   "Surveys with Protocols",
+                                   "Inventory Surveys",
+                                   "Monitoring Surveys",
+                                   "Research"),
+                          value = c(nrow(input_dat),
+                                    input_dat %>% filter(SurveyStatus == "Current") %>% nrow(),
+                                    paste0(input_dat %>% filter(HasProtocol == "Has Protocol") %>% nrow(), " (", round(input_dat %>% filter(HasProtocol != "Has Protocol") %>% nrow() / input_dat %>% filter(SurveyStatus == "Current") %>% nrow(), digits = 0), "%)"),
+                                    input_dat %>% filter(SurveyTypeShort == "Inventory") %>% nrow(),
+                                    input_dat %>% filter(SurveyTypeShort == "Monitoring") %>% nrow(),
+                                    input_dat %>% filter(SurveyTypeShort == "Research") %>% nrow())
+                          )
+
+kbl(dat_summary, 
+    col.names = NULL) %>%
+  kable_styling(full_width = F,
+                position = "left",
+                font_size = 16)
+```
 
 
 ```{r tbl_DT, echo=FALSE, message=FALSE, warning=FALSE}
@@ -60,7 +90,7 @@ library(flextable)
 #set_flextable_defaults(fonts_ignore=TRUE)
 
 if (nrow(dat()[dat()$ProtocolTitle == "NA", ]) == nrow(dat())) {
-  print("No protocols to display within your search criteria.")
+  cat("No protocols to display within your search criteria.")
 } else {
   dat() %>%
     dplyr::select(ProtocolTitle,
@@ -82,8 +112,6 @@ if (nrow(dat()[dat()$ProtocolTitle == "NA", ]) == nrow(dat())) {
 
 \newpage
 
-
-gfsdg dfg dfg yh5tsegas hyte hsdhg sdfh.
 
 ```{r tbl_surveys, echo=FALSE, message=FALSE, warning=FALSE, fig.cap= "Refuge surveys in Alaska."}
 set_flextable_defaults(fonts_ignore=TRUE)
