--- a/annual_report.Rmd
+++ b/annual_report.Rmd
@@ -3,18 +3,6 @@ title:  |
     | Annual Report of Survey Activities on Refuges  
     |
     | ![](bear.jpg){width=7in}
-output:
-  pdf_document:
-    latex_engine: xelatex
-    number_sections: no
-    toc: no
-  word_document:
-    toc: yes
-  html_document:
-    df_print: paged
-    toc: yes
-header-includes:
-  - \usepackage{fontawesome5}
 subtitle: |
   |
   |
@@ -24,9 +12,17 @@ subtitle: |
   | National Wildlife Refuge System
   | Alaska Region
   | 2021
+output:
+  pdf_document:
+    latex_engine: xelatex
+    number_sections: no
+    includes:
+      in_header: latex/header.tex
+      before_body: latex/before_body.tex 
+      after_body: latex/after_body.tex
+    toc: yes
+    toc_depth: 2
 ---
-
-\pagenumbering{gobble}
 
 \newpage
 
@@ -40,7 +36,7 @@ library(kableExtra)
 ```
 
 # Summary Information  
-```{r format_data, echo=F, warning=F, message=F}
+```{r import_format, echo=F, warning=F, message=F}
 # Load the survey data locally
 load("./data/dat.Rdata")
 
@@ -55,44 +51,57 @@ year_selected <- 2021
 dat <- dat %>% filter(year == year_selected)
 ```
 
+  
+```{r tbl_activity, echo=F, message=F}
 
-```{r summary_table, echo=F, message=F}
-
-completed <- dat %>% 
+# Completed surveys
+complete <- dat %>% 
   filter(isSurveyConducted == "true") %>%
   group_by(StationName) %>% 
   tally()
 
-not_completed <- dat %>% 
+# Incomplete surveys
+incomplete <- dat %>% 
   filter(isSurveyConducted == "false") %>%
   group_by(StationName) %>% 
   tally()
 
-tbl <- merge(completed, not_completed, by = "StationName")
+# Merge them
+tbl <- merge(complete, incomplete, by = "StationName", all = T)
 
+# Add back refuges that have no activity data and mark them as "Unknown"
+refuges <- data.frame("StationName" = levels(tbl$StationName))
+tbl <- merge(tbl, refuges, by = "StationName", all.y = T)
+tbl <- tbl %>% 
+  mutate(n.x = replace(n.x, is.na(n.x), "Unknown"),
+         n.y = replace(n.y, is.na(n.y), "Unknown"))
+
+# Create tables
 tbl %>% kbl(col.names = c("Refuge", "Surveys completed", "Surveys not completed"),
-                     caption = "Summary of survey activity in 2021 at National Wildlife Refuges in the Alaska Region. Refuges that are not listed here did not update 2021 survey annual activities in PRIMR. Surveys were considered completed if data were collected for 75\\% or more of the scheduled sample sites in the given calendar year.",
+                     caption = "Summary of survey activity at National Wildlife Refuges in the Alaska Region in 2021. Surveys are considered completed if data are collected for 75\\% or more of the scheduled sample sites in the given calendar year.",
             booktabs = T) %>%
-    kable_styling(latex_options = c("striped", "hold_position"),
+    kable_styling(latex_options = c("striped", 
+                                    "HOLD_position"),
                   position = "left")
 ```
 
-
-```{r reasons, echo=F, message=F}
+  
+```{r tbl_reasons, echo=F, message=F}
 dat %>%
   filter(isSurveyConducted == "false") %>%
   group_by(reason) %>%
   tally() %>%
   arrange(-n) %>%
   kbl(col.names = c("Reason", "n"),
-               caption = "Summary of reasons for why surveys in 2021 were not completed at National Wildlife Refuges in the Alaska Region. The Administrative category includes COVID-related restrictions to field activities.",
+               caption = "Summary of reasons for why surveys were not completed at National Wildlife Refuges in the Alaska Region in 2021. The Administrative category includes COVID-related restrictions to field activities.",
       booktabs = T) %>%
-    kable_styling(latex_options = c("striped", "hold_position"),
+    kable_styling(latex_options = c("striped", 
+                                    "HOLD_position"),
                   position = "left")
 ```
 
-
-```{r tbl_biotic_grps, echo=F, message=F}
+  
+```{r tbl_biotic_grp1, echo=F, message=F}
 
 # Unnest derivedBioticGroupLevel1
 derived <- dat %>%
@@ -121,15 +130,17 @@ foo <- foo %>%
   select(c(bio_grp, n)) %>%
   arrange(-n)
   
-  kbl(foo, col.names = c("Biotic group (level 1)", "n"),
-      caption = "Summary of biotic groups (level 1) that are targeted or influenced by surveys completed in 2021 at National Wildlife Refuges in the Alaska Region, 2021. Level 1 is a high level taxonomic category ranging from Class to Kingdom. Unknown values indicate surveys without a biotic group specified in PRIMR.",
+  kbl(foo, 
+      col.names = c("Biotic group (Level 1)", "n"),
+      caption = "Summary of biotic groups (Level 1) that were targeted or influenced by surveys completed at National Wildlife Refuges in the Alaska Region in 2021. Level 1 is a high level taxonomic category ranging from Class to Kingdom. Unknown values indicate surveys without a biotic group (Level 1) specified in PRIMR.",
       booktabs = T) %>%
-    kable_styling(latex_options = c("striped", "hold_position"),
+    kable_styling(latex_options = c("striped", 
+                                    "HOLD_position"),
                   position = "left")
 ```
 
-
-```{r, echo=F, message=F}
+  
+```{r tbl_biotic_grp2, echo=F, message=F, fig.align='left'}
 ## Biotic group, level 2
   # Unnest derivedBioticGroupLevel2
 derived <- dat %>%
@@ -158,38 +169,100 @@ foo <- foo %>%
   select(c(bio_grp, n)) %>%
   arrange(-n)
   
-  kbl(foo, longtable = T, col.names = c("Biotic group (level 2)", "n"),
-      caption = "Summary of biotic groups (level 2) that are targeted or influenced by surveys completed in 2021 at National Wildlife Refuges in the Alaska Region, 2021. This is a mid-level taxonomic category ranging from Family to Order. Unknown values indicate surveys without a biotic group specified in PRIMR.",
+  kbl(foo, 
+      longtable = T, 
+      col.names = c("Biotic group (Level 2)", "n"),
+      caption = "Summary of biotic groups (Level 2) that were targeted or influenced by surveys completed at National Wildlife Refuges in the Alaska Region in 2021. Level 2 is a mid-level taxonomic category ranging from Family to Order. Unknown values indicate surveys without a biotic group (Level 2) specified in PRIMR.",
       booktabs = T) %>%
     kable_styling(latex_options = c("striped", 
-                                    "hold_position",
+                                    "HOLD_position",
                                     "repeat_header"),
                   position = "left")
 ```
 
-
+  
+```{r tbl_biotic_grp_combined, echo=F, message=F}
+## Biotic group, level 2
+  # Unnest derivedBioticGroupLevel2
+# derived <- dat %>%
+#   unnest(derivedBioticGroupLevel1, keep_empty = TRUE) %>%
+#   unnest(derivedBioticGroupLevel2, keep_empty = TRUE, names_repair = "unique") %>%
+#   rename(scientificName1 = scientificName...26,
+#          scientificName2 = scientificName...28,
+#          commonName1 = commonName...27,
+#          commonName2 = commonName...29) %>%
+#   filter(isSurveyConducted == "true") %>%
+#   select(StationName, SurveyName, scientificName1, commonName1, scientificName2, commonName2)
+# 
+# # Unnest bioticGroupLevel2
+# bio_grps <- dat %>%
+#   unnest(bioticGroupLevel1, keep_empty = TRUE) %>%
+#   unnest(bioticGroupLevel2, keep_empty = TRUE, names_repair = "unique") %>%
+#   rename(scientificName1 = scientificName...24,
+#          scientificName2 = scientificName...26,
+#          commonName1 = commonName...25,
+#          commonName2 = commonName...27) %>%
+#   filter(isSurveyConducted == "true") %>%
+#   select(StationName, SurveyName, scientificName1, commonName1, scientificName2, commonName2)
+# 
+# # Combine them and keep distinct values, remove NAs
+# foo <- rbind(derived, bio_grps)
+# foo <- foo %>%
+#   distinct()
+# 
+# foo <- foo %>%
+#   group_by(scientificName1, commonName1, scientificName2, commonName2) %>%
+#   tally() %>%
+#   ungroup() %>%
+#   mutate(commonName = tolower(commonName),
+#          bio_grp = paste(scientificName, " (", commonName, ")", sep = ""),
+#          bio_grp = replace(bio_grp, bio_grp == "NA (NA)", "Unknown")) %>%
+#   select(c(bio_grp, n)) %>%
+#   arrange(-n)
+#   
+#   kbl(foo, longtable = T, col.names = c("Biotic group (Level 2)", "n"),
+#       caption = "Summary of biotic groups (Level 2) that were targeted or influenced by surveys completed at National Wildlife Refuges in the Alaska Region in 2021. Level 2 is a mid-level taxonomic category ranging from Family to Order. Unknown values indicate surveys without a biotic group (Level 2) specified in PRIMR.",
+#       booktabs = T) %>%
+#     kable_styling(latex_options = c("striped", 
+#                                     "hold_position",
+#                                     "repeat_header"),
+#                   position = "left")
+```
 
 
 \newpage
 
-```{r loop, echo=F, results='asis'}
+# Survey Conducted in 2021  
+
+The following lists refuge surveys that are reported in PRIMR as completed in 2021. Surveys are considered completed if data are collected for 75% or more of the scheduled sample sites in the given calendar year. 
+
+```{r refuge_summaries, echo=F, results='asis'}
 
 foo <- dat %>% 
   filter(isSurveyConducted == "true") %>%
   droplevels() %>%
   mutate(servCatUrl = replace_na(servCatUrl, "(No ServCat project record)"),
-         answerQuestion2.text = replace_na(answerQuestion2.text, "(Not entered)"))
+         answerQuestion2.text = replace_na(answerQuestion2.text, "(Not entered)"),
+         StationName = toupper(paste(StationName, "Refuge")),
+         ProtocolTitle = as.character(ProtocolTitle),
+         ProtocolTitle = replace_na(ProtocolTitle, ("(No protocol)")))
 foo <- split(foo, foo$StationName)
 
   
 for (i in (1:length(foo))) {
   cat("\n")
-  cat("#", names(foo[i]), "\n")
+  cat("##", names(foo[i]), "\n")
   for(t in (1:length(foo[[i]]$SurveyName))) {
-    cat("## ", "[", foo[[i]]$SurveyName[t], "](https://ecos.fws.gov/primr/survey/edit/", foo[[i]]$id[t], ")", "\n", sep = "")
+    cat("### ", "[", foo[[i]]$SurveyName[t], "](https://ecos.fws.gov/primr/survey/edit/", foo[[i]]$id[t], ")", " \n", sep = "")
     cat("**Survey record:** https://ecos.fws.gov/primr/survey/edit/", foo[[i]]$id[t], "\n", sep = "")
     cat("\n")
+    cat("**Survey type:**", foo[[i]]$SurveyType[t], "\n")
+    cat("\n")
+    cat("**Frequency:**", foo[[i]]$Frequency[t], "\n")
+    cat("\n")
     cat("**Products:**", foo[[i]]$servCatUrl[t], "\n")
+    cat("\n")
+      cat("**Protocol:** ", "[", foo[[i]]$ProtocolTitle[t], "](https://ecos.fws.gov/ServCat/Reference/Profile/", foo[[i]]$protocol.servCatId[t], ")", " \n", sep = "")
     cat("\n")
     cat("**Survey Coordinator:** ", foo[[i]]$coordinatorName[t], " (", foo[[i]]$coordinatorTitle[t], ")", "\n", sep = "")
     cat("\n")
@@ -205,8 +278,7 @@ for (i in (1:length(foo))) {
 
 \newpage
 
-# \faRProject  
-## Session Info
+# R Session Info
 
 ```{r session_info, results='asis', echo=F}
 sessionInfo()
